[package]
name = "easy_proxy"
version = "0.1.0"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
futures-util = "0.3"
async-trait = "0.1"
structopt = { version = "0.3", features = ["color"] }
libc = "0.2"
log = "0.4"
simple_logger = "1.6"
os_pipe = "0.9"
nix = "0.17"
mio = "0.6"
tokio-rustls = "0.13"
http = "0.2"
bytes = "0.5"

[dependencies.tokio]
version = "0.2"
features = ["macros", "rt-core", "io-util", "net"]
