[package]
name = "easy_proxy"
version = "0.1.0"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["client", "http1", "http2"] }
futures-util = "0.3"
async-trait = "0.1"
structopt = { version = "0.3", features = ["color"] }
libc = "0.2"
log = "0.4"
simple_logger = "1.6"
os_pipe = "0.9"
nix = "0.17"
tokio-rustls = "0.22"
http = "0.2"
bytes = "1.0"

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt", "io-util", "net"]
